descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2010-12-XX  Release 7.18.2                                     ---
----------------------------------------------------------------------

* dbupgrade support for binary-incompatible v4 files - Sean Morrison
* new opendb -f endianness flip option for corrupt v4 - Sean Morrison
* new mime-type geometry association for Debian platform - Jordi Sayol
* improved Debian platform support with new menus, icons - Jordi Sayol
* improved mged 'ls' command support for v4 databases - Sean Morrison
* dbconcat supports title, units, & color table import - John Anderson
* 'tree -a' command lists object attributes - Tom Browder
* fixed Mac build failure running asc2g before install - Sean Morrison
* fixed g_diff color table difference false positive - Sean Morrison
* fixed asc2g color table bug parsing 'color' lines - Sean Morrison
* 'attr show' command displays attributes sorted by name - Tom Browder
* fixed ted command to work using new editor support - Cliff Yapp
* fixed mged text editor invocation bug when editor wasn't installed
	- Sean Morrison, Daniel Roßberg, Cliff Yapp
* support for comment lines at beginning of .asc files - John Anderson
* disabled adrt_master and adrt_slave tools - Erik Greenwald
* ported pixblend image processing tool to Windows - Erik Greenwald
* upgraded libpng to version 1.4.5 - Cliff Yapp
* upgraded zlib to version 1.2.5 - Cliff Yapp
* removed shell execution ! command from vdeck - Cliff Yapp

----------------------------------------------------------------------
--- 2010-12-07  Release 7.18.0                                     ---
----------------------------------------------------------------------

This release includes the initial release of a new Bag of Triangle
(BoT) editing interface for MGED and Archer.  Nicholas Reed developed