@@ -947,7 +947,7 @@ main(int argc, char **argv)
 	bu_exit(1, "%s and %s are the same file\n", file1, file2);
     }
 
-    Tcl_FindExecutable(argv[0]);
+    Tcl_FindExecutable(invoked_as);
     interp = Tcl_CreateInterp();
     tclcad_auto_path(interp);
 
